--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Rocky</h1>
+        <h1>David</h1>
       </div>
       <div class="col-md-9">
-        <h3>I started taking classes at Bitwise because I was tired of working retail jobs and feeling like I was stuck. A friend of mine told me about the Geekwise classes and I thought I'd give it a shot. Three months later, I was offered an internship at Edit LLC and shortly after, I was accepted into the cohort and never looked back.</h3>
+        <h3>My friend brought Geekwise to my attention shortly after we decided together that we wouldn't settle for dead-end jobs after graduating college. Ultimately, I want to be part of a sales or marketing team for a tech company but I realize that I wouldn't be able to without a thorough understanding of what goes into the products and services these companies offer. I want to be well-rounded in programming and developing and I have been growing more excited as I've delved deeper into this sub-culture. I look forward to learning all I can about this industry.</h3>
       </div>
     </div>
   </div>
